tests/stderr-snapshots/integration__integration__image_sources__image_source_in_msg.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: unexpected image_source
   ┌─ <input>:11:30
   │
11 │         #pragma image_source "tests/integration/resources/th12-embedded-image-source.anm"
   │                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image_source not valid in this format


